# Operation-Systems

lab2/: CMakeLists.txt
lab3/: CMakeLists.txt  README.md  main.cpp  marker_logic.cpp  marker_logic.h  test_main.cpp
lab4/: CMakeLists.txt
lab4/Receiver/: main.cpp
lab4/Sender/: main.cpp
